Document a Workaround for HTTP Patch & provide tests
Signed-off-by: jansupol <jan.supol@oracle.com>